perf(单脚本兼容jdk多版本):